--- a/album.html
+++ b/album.html
@@ -22,6 +22,7 @@
    </style>
 </head>
 <body>
+   {{>loginButtons align="right"}}
    {{>main}}
 </body>
 
@@ -31,7 +32,7 @@
     <table class="album-black" width="100%" height="100%">
         <table class="stopka" width="100%"><tr>
             <td align="left"><div>
-               <a href="https://github.com/aszykula/aszykula.github.io" target="_blank">Zobacz na GitHubie - źródła.</a></div></td>
+               <a href="https://github.com/aszykula/FotoApp-Meteor" target="_blank">Zobacz na GitHubie - źródła.</a></div></td>
             <td align="right"><div><a href="http://aszykula.github.io/" target="_blank">About me - Artur Szykuła.</a></div></td>
         </tr></table>
    <h1>Portal - śmieszne fotki.</h1>
